crates/bevy_ecs/compile_fail/tests/ui.rs
fn main() -> bevy_compile_test_utils::ui_test::Result<()> {
    bevy_compile_test_utils::test("tests/ui")
}
